--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.1",
-    "react-redux": "7.2.4"
+    "react-native-get-random-values": "1.7.0",
+    "react-native-uuid": "2.0.1",
+    "react-redux": "7.2.4",
+    "uuid": "8.3.2",
+    "uuidv4": "6.2.8"
   },
   "devDependencies": {
     "@babel/core": "7.14.0",
